fixing the map z-index

--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -73,6 +73,7 @@
     width: 400px;
     border: 3px solid gray;
     border-radius: 15px;
+    z-index: 0;
   }
   .contact-link{
     display: flex;
